deleting unneccessary routes and fixing header, footer z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,6 @@ header, footer {
   position: fixed;
   width: 100%;
   height: 60px;
-  z-index: 5;
 }
 
 footer {
