--- a/public/css/new_venture.css
+++ b/public/css/new_venture.css
@@ -1,5 +1,5 @@
 #create-venture, #friend-list, #show-categories {
-  height: 750px;
+  height: 700px;
   border: 1px solid red;
   border-radius: 10px;
 }
